--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h1>Odin Recipes</h1>
 
         <a href="recipes/deviled-eggs.html">Virginia's Deviled Egges</a>
+        <a href="recipes/tres-leches.html">Christina's Tres Leches Cake</a>
 
     </body>
 </html>
