Add Garlic Naan recipe. Finalize Index. Project stage complete.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <title>Recipe Box</title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-
+  <head>
+    <meta charset="UTF-8" />
+    <title>Recipe Box</title>
+  </head>
+  <body>
+    <h1>Odin Recipes</h1>
+    <img src="images/index-top-image.png" />
+    <p>
         <a href="recipes/deviled-eggs.html">Virginia's Deviled Egges</a>
         <a href="recipes/tres-leches.html">Christina's Tres Leches Cake</a>
-
-    </body>
+        <a href="recipes/garlic-naan.html">Garlic Naan</a>
+    </p>
+  </body>
 </html>
