--- a/recipes/deviled-eggs.html
+++ b/recipes/deviled-eggs.html
@@ -46,5 +46,7 @@
             <li>Fill egg halves</li>
             <li>Add a dash of paprika to the top of each egg (optional)</li>
         </ol>
+
+        <h4><a href="../index.html">Back to Main Page</a></h4>
     </body>
 </html>
