Compete Foundations CSS. Complete Practice Task

--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <title>Recipe Box</title>
+    <link rel="stylesheet" href="/CSS/homepage.css">
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <img src="images/index-top-image.png" />
-    <p>
-        <a href="recipes/deviled-eggs.html">Virginia's Deviled Egges</a>
-        <a href="recipes/tres-leches.html">Christina's Tres Leches Cake</a>
-        <a href="recipes/garlic-naan.html">Garlic Naan</a>
-    </p>
+    <img id="worstcooks" src="images/index-top-image.png" alt="Worst Cooks In America"/>
+    <div class="listcontainer">
+      <h2>Homemade Recipes</h2>
+      <p>There are <strong>REAL</strong> recipes that have been made many times over by myself and my fiance.</p>
+      <ul class="recipes">
+        <li><a href="recipes/deviled-eggs.html">Virginia's Deviled Egges</a></li>
+        <li><a href="recipes/tres-leches.html">Christina's Tres Leches Cake</a></li>
+        <li><a href="recipes/garlic-naan.html">Garlic Naan</a></li>
+      </ul>
+    </div>
   </body>
 </html>
