--- a/recipes/garlic-naan.html
+++ b/recipes/garlic-naan.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Garlic Naan Recipe</title>
+    <link rel="stylesheet" href="/CSS/recipes.css">
   </head>
   <body>
     <h1>Garlic Naan</h1>
