--- a/recipes/tres-leches.html
+++ b/recipes/tres-leches.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Tres Leches Cake</title>
+    <link rel="stylesheet" href="/CSS/recipes.css">
   </head>
   <body>
     <h1>Christina's Tres Leches Cake</h1>
